--- a/frontend/facebookLike/style.css
+++ b/frontend/facebookLike/style.css
@@ -33,6 +33,7 @@ img {
 
 p:first-of-type {
   margin: 13px;
+  font-size: 30px;
 }
 
 .likeBox{
@@ -40,14 +41,14 @@ p:first-of-type {
     border: 5px solid #DFDFDF;
     color: #717171;
     font-size: 13px;
-    height: 30px;
+    height: 40px;
     line-height: 30px;
     position: absolute;
-    top: -40px;
+    top: -50px;
     left: 0px;
     display: none;
     visibility: hidden;
-    padding:0 20px;
+    padding:0 5px;
     /*transition-property: visibility;*/
     /*transition-delay: 2s;*/
 }
@@ -56,6 +57,7 @@ p:first-of-type {
   position: relative;
   display: flex;
   align-items: center;
+  padding: 0px;
 }
 
 .likeMain:after {
@@ -74,6 +76,6 @@ p:first-of-type {
   margin-left: 5px;
 }
 
-.reactions div {
-  margin-left: 3px;
+.reactions > div {
+  padding: 0px 10px;
 }
