--- a/frontend/facebookLike/style.css
+++ b/frontend/facebookLike/style.css
@@ -20,6 +20,7 @@ body {
   max-height: 40px;
   overflow: hidden;
   border-radius: 50%;
+  margin-right: 7px;
 }
 
 img {
@@ -78,4 +79,9 @@ p:first-of-type {
 
 .reactions > div {
   padding: 0px 10px;
+}
+
+.currentLike {
+  display: flex;
+  align-items: center;
 }
