--- a/frontend/cssgrid/style.css
+++ b/frontend/cssgrid/style.css
@@ -1,14 +1,47 @@
 .container {
   display: grid;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   grid-template-columns: 10% 20% 30% 40%;
   grid-template-rows: 40% 30% 20% 10%;
   grid-template-areas:
-    "header header . header";
+    "index . . ."
+    "index . . ."
+    "index . . ."
+    "index . . .";
+  /*grid-template:
+    ". . . ." 40% 30% 20% 10%
+    "index . . ." 40% 30% 20% 10%
+    "index . . ." 40% 30% 20% 10%
+    "index . . ." 40% 30% 20% 10%
+    / 10% 20% 30% 40%;*/
   border: 1px solid red;
 }
 
+/*.side {
+  grid-area: side;
+  background-color: blue;
+}*/
+
 .header {
-  grid-area: header;
+  display: flex;
+  /*grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;*/
+
+  grid-area: 1 / 1 / 2 / 5;
+  background-color: red;
+  /*justify-self: stretch;
+  align-self: stretch;*/
+  justify-content: center;
+  align-items: center;
+}
+
+.index {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  grid-area: index;
+  background-color: pink;
 }
