--- a/frontend/optimizedImages/main.css
+++ b/frontend/optimizedImages/main.css
@@ -1,2 +1,12 @@
-body {
-  background-color: #3bbfce; }
+@import url(./style.css);
+@media (min-width: 480px) {
+  body {
+    font-size: 1em;
+    background-color: blue;
+    color: blue; } }
+
+@media (max-width: 480px) {
+  body {
+    background-color: red; }
+  p {
+    border-radius: 10px; } }
