--- a/frontend/expediaDeals/main.scss
+++ b/frontend/expediaDeals/main.scss
@@ -1,3 +1,30 @@
-h1{
-  background: red;
+body {
+  min-width: 100%;
+}
+
+.container {
+    width: 100%;
+    display: grid;
+    grid-gap: 20px;
+    grid-template:
+      "a a a a" 100px
+      "b b b b" 200px
+      "c c c c" 200px;
+    grid-auto-rows: 1fr 1fr 1fr 1fr;
+    grid-auto-columns: 100px;
+  }
+
+.tenPercent {
+  grid-column: 1/-1;
+  grid-row: 1;
+}
+
+.heading {
+  grid-column: 1/-1;
+  grid-row: 2;
+}
+
+.search {
+  grid-column: 1/-1;
+  grid-row: 3/span 3;
 }
