--- a/frontend/expediaDeals/main.scss
+++ b/frontend/expediaDeals/main.scss
@@ -1,30 +1,54 @@
+@import './reset.css';
+@import './searchBox.scss';
+
 body {
-  min-width: 100%;
+  min-width: 100vw;
+  background-color: #EDEDED;
 }
 
 .container {
-    width: 100%;
     display: grid;
-    grid-gap: 20px;
     grid-template:
-      "a a a a" 100px
-      "b b b b" 200px
-      "c c c c" 200px;
-    grid-auto-rows: 1fr 1fr 1fr 1fr;
-    grid-auto-columns: 100px;
+      "a a a a" auto
+      "b b b b" auto
+      "c c c c" auto
+      "d d d d" auto
+      "f f f f" auto
+      / 1fr 1fr 1fr 1fr;
+    // grid-auto-columns: 100px;
   }
 
 .tenPercent {
   grid-column: 1/-1;
   grid-row: 1;
+  background-color: #F8CC45;
+  text-align: center;
 }
 
 .heading {
   grid-column: 1/-1;
   grid-row: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .search {
   grid-column: 1/-1;
-  grid-row: 3/span 3;
+  grid-row: 3;
+  background-image: url('./assets/searchBackground.png');
+  background-size: 100vw;
+  min-height: 80vh;
+}
+
+.flights {
+  grid-column: 1/-1;
+  margin: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+}
+
+.flightItem{
+  background-color: white;
 }
