flight options css

--- a/frontend/expediaDeals/main.scss
+++ b/frontend/expediaDeals/main.scss
@@ -4,6 +4,7 @@
 body {
   min-width: 100vw;
   background-color: #EDEDED;
+  font-family: Helvetica Neue, Arial, Lucida Grande, sans-serif;
 }
 
 .container {
