--- a/frontend/expediaDeals/main.css
+++ b/frontend/expediaDeals/main.css
@@ -1,4 +1,36 @@
 @import url(./reset.css);
+.search {
+  color: white;
+  font-size: 1.7em;
+  font-weight: bold;
+  padding: 1em; }
+
+.options {
+  max-width: 40vw;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background-color: #040F19;
+  opacity: 0.8;
+  margin-top: 1em;
+  padding: 1em;
+  font-size: .6em;
+  font-weight: normal;
+  border-radius: 2%; }
+
+.flightAndHotelOptions div {
+  border-radius: 2%; }
+
+.flightAndHotelOptions div:hover {
+  background-color: #57b3ff;
+  margin-right: 1em; }
+
+.tripInputs input {
+  color: black; }
+
+.flightAndHotelInputs {
+  grid-column: 2/-1;
+  font-size: .8em; }
+
 .flightOnlyOption {
   position: relative;
   padding-left: 16px;
@@ -41,9 +73,18 @@
   border-radius: 50%;
   background: white; }
 
+.tripInputs {
+  display: flex;
+  flex-direction: column; }
+
+.flightAndHotel {
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+
 body {
   min-width: 100vw;
-  background-color: #EDEDED; }
+  background-color: #EDEDED;
+  font-family: Helvetica Neue, Arial, Lucida Grande, sans-serif; }
 
 .container {
   display: grid;
