--- a/frontend/expediaDeals/searchBox.scss
+++ b/frontend/expediaDeals/searchBox.scss
@@ -1,3 +1,41 @@
+.search{
+  color: white;
+  font-size: 1.7em;
+  font-weight: bold;
+  padding: 1em;
+}
+
+.options{
+  max-width: 40vw;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background-color: #040F19; opacity:0.8;
+  margin-top: 1em;
+  padding: 1em;
+  font-size: .6em;
+  font-weight: normal;
+  border-radius: 2%;
+}
+
+.flightAndHotelOptions div {
+  border-radius: 4%;
+  padding: .5em;
+}
+
+.flightAndHotelOptions div:hover {
+  background-color: #57b3ff;
+  margin-right: 1em;
+}
+
+.tripInputs input{
+  color: black;
+}
+
+.flightAndHotelInputs{
+  grid-column: 2/-1;
+  font-size: .8em;
+}
+
 .flightOnlyOption {
   // display: block;
   position: relative;
@@ -50,6 +88,13 @@
 	background: white;
 }
 
-.roundtrip{
-  // display: none;
+.tripInputs{
+  display: flex;
+  flex-direction: column;
+  // max-width: 40%;
+}
+
+.flightAndHotel{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
