--- a/frontend/expediaDeals/main.css
+++ b/frontend/expediaDeals/main.css
@@ -9,23 +9,32 @@
   max-width: 40vw;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  background-color: #040F19;
-  opacity: 0.8;
   margin-top: 1em;
   padding: 1em;
   font-size: .6em;
   font-weight: normal;
-  border-radius: 2%; }
+  border-radius: 2%;
+  position: relative;
+  z-index: 0; }
+
+.options:before {
+  content: '';
+  background-color: black;
+  opacity: 0.8;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1; }
 
 .flightAndHotelOptions div {
-  border-radius: 2%; }
+  border-radius: 4%;
+  padding: .5em; }
 
 .flightAndHotelOptions div:hover {
-  background-color: #57b3ff;
+  background-color: #0087f5;
   margin-right: 1em; }
-
-.tripInputs input {
-  color: black; }
 
 .flightAndHotelInputs {
   grid-column: 2/-1;
@@ -34,6 +43,7 @@
 .flightOnlyOption {
   position: relative;
   padding-left: 16px;
+  margin: 20px 32px 0px 0px;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -75,14 +85,104 @@
 
 .tripInputs {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  max-width: 90%;
+  margin-top: 2em; }
+
+.tripInputs input {
+  color: black;
+  margin-top: .9em;
+  border-radius: 4%;
+  padding: .8em;
+  background-color: white; }
+
+.passengers {
+  display: flex;
+  flex-direction: row; }
+
+.adults {
+  max-width: 5em;
+  margin-right: 1em; }
+
+.children {
+  max-width: 6.4em; }
+
+.flightAndHotelInputs div:nth-last-child(2) {
+  margin-top: .9em;
+  color: #2665B2; }
 
 .flightAndHotel {
   display: grid;
-  grid-template-columns: 1fr 1fr; }
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr; }
+
+.searchSubmit {
+  display: inline-block;
+  padding: 1em;
+  background-color: #ffcb00;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: black;
+  border-radius: 4%;
+  margin-top: 1.5em; }
+
+.tenPercent {
+  padding-top: .6em;
+  padding-bottom: .3em;
+  font-weight: bold;
+  font-size: .9em; }
+
+.arrowdown {
+  border: solid;
+  border-width: 0 0.2em 0.2em 0;
+  display: inline-block;
+  padding: .17em;
+  transform: rotate(45deg); }
+
+.heading {
+  color: #00355f;
+  font-size: .8em; }
+
+.myAccount {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin: 0 2.5em; }
+
+.myAccount div {
+  margin: .5em .5em; }
+
+.dropdown {
+  position: relative;
+  display: inline-block; }
+
+.dropdownMenu {
+  position: absolute;
+  display: none;
+  background-color: #00355f;
+  top: 1em;
+  left: -10em;
+  color: white;
+  z-index: 1;
+  width: 14em; }
+
+.dropdownMenu div {
+  padding: .5em; }
+
+.dropdown:hover .dropdownMenu {
+  display: block; }
+
+.navLinks {
+  margin: 1.3em 1.5em 0em 1.5em;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 1.5em;
+  font-size: 1.1em; }
+
+.navLinks div {
+  margin: 0em .7em; }
 
 body {
-  min-width: 100vw;
   background-color: #EDEDED;
   font-family: Helvetica Neue, Arial, Lucida Grande, sans-serif; }
 
@@ -93,15 +193,13 @@ body {
 .tenPercent {
   grid-column: 1/-1;
   grid-row: 1;
-  background-color: #F8CC45;
+  background-color: #ffcc00;
   text-align: center; }
 
 .heading {
   grid-column: 1/-1;
   grid-row: 2;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end; }
+  background-color: #ffcc00; }
 
 .search {
   grid-column: 1/-1;
