--- a/frontend/expediaDeals/searchBox.scss
+++ b/frontend/expediaDeals/searchBox.scss
@@ -9,12 +9,25 @@
   max-width: 40vw;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  background-color: #040F19; opacity:0.8;
+  // background-color: #040F19; opacity:0.8;
   margin-top: 1em;
   padding: 1em;
   font-size: .6em;
   font-weight: normal;
   border-radius: 2%;
+  position: relative;
+  z-index: 0;
+}
+
+.options:before{
+  content: '';
+  background-color: black; opacity:0.8;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .flightAndHotelOptions div {
@@ -23,12 +36,8 @@
 }
 
 .flightAndHotelOptions div:hover {
-  background-color: #57b3ff;
+  background-color: #0087f5;
   margin-right: 1em;
-}
-
-.tripInputs input{
-  color: black;
 }
 
 .flightAndHotelInputs{
@@ -40,6 +49,7 @@
   // display: block;
   position: relative;
   padding-left: 16px;
+  margin: 20px 32px 0px 0px;
   // margin-bottom: 12px;
   cursor: pointer;
   // font-size: 22px;
@@ -91,10 +101,52 @@
 .tripInputs{
   display: flex;
   flex-direction: column;
-  // max-width: 40%;
+  max-width: 90%;
+  margin-top: 2em;
+}
+
+.tripInputs input{
+  color: black;
+  margin-top: .9em;
+  border-radius: 4%;
+  padding: .8em;
+  background-color: white;
+}
+
+.passengers{
+  display: flex;
+  flex-direction: row;
+}
+
+.adults{
+  max-width: 5em;
+  margin-right: 1em;
+}
+
+.children{
+  max-width: 6.4em;
+}
+
+.flightAndHotelInputs div:nth-last-child(2){
+  margin-top: .9em;
+  color: #2665B2;
 }
 
 .flightAndHotel{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  // grid-auto-columns: 1fr;
+  // grid-auto-rows: 1fr;
+}
+
+.searchSubmit{
+  display: inline-block;
+  padding: 1em;
+  background-color: #ffcb00;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: black;
+  border-radius: 4%;
+  margin-top: 1.5em;
 }
