--- a/frontend/expediaDeals/main.scss
+++ b/frontend/expediaDeals/main.scss
@@ -1,6 +1,7 @@
 @import './reset.css';
 @import './searchBox.scss';
 @import './heading.scss';
+@import './flightItem.scss';
 
 body {
   // min-width: 100vw;
