--- a/frontend/expediaDeals/style/main.scss
+++ b/frontend/expediaDeals/style/main.scss
@@ -37,7 +37,7 @@ body {
 .search {
   grid-column: 1/-1;
   grid-row: 3;
-  background-image: url('./assets/searchBackground.png');
+  background-image: url('../assets/searchBackground.png');
   background-size: 100vw;
   min-height: 80vh;
 }
