--- a/frontend/expediaDeals/style/searchBox.scss
+++ b/frontend/expediaDeals/style/searchBox.scss
@@ -109,8 +109,9 @@
   color: black;
   margin-top: .9em;
   border-radius: 4%;
-  padding: .8em;
+  padding: .45em;
   background-color: white;
+  font-size: 1.1em;
 }
 
 .passengers{
