--- a/frontend/expediaDeals/style/main.css
+++ b/frontend/expediaDeals/style/main.css
@@ -93,8 +93,9 @@
   color: black;
   margin-top: .9em;
   border-radius: 4%;
-  padding: .8em;
-  background-color: white; }
+  padding: .45em;
+  background-color: white;
+  font-size: 1.1em; }
 
 .passengers {
   display: flex;
