--- a/frontend/expediaDeals/style/flightItem.scss
+++ b/frontend/expediaDeals/style/flightItem.scss
@@ -2,9 +2,40 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #2665B2;
+  text-align: center;
+  // color: #2665B2;
   font-size: .85em;
   font-weight: 500;
+  max-width: 100%;
+  position: relative;
+  padding-bottom: 1rem;
+
+  img {
+    max-width: 100%;
+    margin-bottom: 1rem;
+  }
+}
+
+.shadow {
+  position: absolute;
+  align-self: flex-start;
+  background-color: black; opacity:0.6;
+  padding: .6em .6em;
+  font-family: "Helvetica Neue";
+  // font-weight: 200;
+  color: white;
+}
+
+.roundtripDateRange {
+  margin-bottom: 1rem;
+  font-size: .7rem;
+  font-weight: 200;
+}
+
+.flightRoundtripCities {
+  color: #2665B2;
+  margin-bottom: 1rem;
+  line-height: 1rem;
 }
 
 .tripDescription {
@@ -23,7 +54,15 @@
   padding: 0 10px;
 }
 
+
 .price {
   color: black;
   font-size: 1.5em;
+  margin-bottom: .5rem;
+}
+
+.pricePerPerson {
+  font-size: .65rem;
+  font-weight: 300;
+  letter-spacing: .03rem;
 }
