--- a/frontend/expediaDeals/style/main.css
+++ b/frontend/expediaDeals/style/main.css
@@ -187,9 +187,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #2665B2;
+  text-align: center;
   font-size: .85em;
-  font-weight: 500; }
+  font-weight: 500;
+  max-width: 100%;
+  position: relative;
+  padding-bottom: 1rem; }
+  .flightItem img {
+    max-width: 100%;
+    margin-bottom: 1rem; }
+
+.shadow {
+  position: absolute;
+  align-self: flex-start;
+  background-color: black;
+  opacity: 0.6;
+  padding: .6em .6em;
+  font-family: "Helvetica Neue";
+  color: white; }
+
+.roundtripDateRange {
+  margin-bottom: 1rem;
+  font-size: .7rem;
+  font-weight: 200; }
+
+.flightRoundtripCities {
+  color: #2665B2;
+  margin-bottom: 1rem;
+  line-height: 1rem; }
 
 .tripDescription {
   width: 88%;
@@ -207,7 +232,13 @@
 
 .price {
   color: black;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  margin-bottom: .5rem; }
+
+.pricePerPerson {
+  font-size: .65rem;
+  font-weight: 300;
+  letter-spacing: .03rem; }
 
 body {
   background-color: #EDEDED;
